--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -308,7 +308,7 @@
   "Search in collection": "Search in collection",
   "Collection menu": "Collection menu",
   "Drop documents to import": "Drop documents to import",
-  "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.",
+  "<em>{{ collectionName }}</em> doesn’t contain any\r\n                    documents yet.": "<em>{{ collectionName }}</em> doesn’t contain any\r\n                    documents yet.",
   "Get started by creating a new one!": "Get started by creating a new one!",
   "Create a document": "Create a document",
   "Manage permissions": "Manage permissions",
@@ -365,7 +365,7 @@
   "Could not update public document sharing": "Could not update public document sharing",
   "The <em>{{ collectionName }}</em> collection is private. Team members have no access to it by default.": "The <em>{{ collectionName }}</em> collection is private. Team members have no access to it by default.",
   "Team members can view documents in the <em>{{ collectionName }}</em> collection by default.": "Team members can view documents in the <em>{{ collectionName }}</em> collection by default.",
-  "Team members can view and edit documents in the <em>{{ collectionName }}</em> collection by\n          default.": "Team members can view and edit documents in the <em>{{ collectionName }}</em> collection by\n          default.",
+  "Team members can view and edit documents in the <em>{{ collectionName }}</em> collection by\r\n          default.": "Team members can view and edit documents in the <em>{{ collectionName }}</em> collection by\r\n          default.",
   "When enabled, documents can be shared publicly on the internet.": "When enabled, documents can be shared publicly on the internet.",
   "Public sharing is currently disabled in the team security settings.": "Public sharing is currently disabled in the team security settings.",
   "Additional access": "Additional access",
@@ -638,7 +638,7 @@
   "Connect": "Connect",
   "The Slack integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "The Slack integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.",
   "New token": "New token",
-  "You can create an unlimited amount of personal tokens to authenticate\n          with the API. Tokens have the same permissions as your user account.\n          For more details see the <em>developer documentation</em>.": "You can create an unlimited amount of personal tokens to authenticate\n          with the API. Tokens have the same permissions as your user account.\n          For more details see the <em>developer documentation</em>.",
+  "You can create an unlimited amount of personal tokens to authenticate\r\n          with the API. Tokens have the same permissions as your user account.\r\n          For more details see the <em>developer documentation</em>.": "You can create an unlimited amount of personal tokens to authenticate\r\n          with the API. Tokens have the same permissions as your user account.\r\n          For more details see the <em>developer documentation</em>.",
   "Tokens": "Tokens",
   "Create a token": "Create a token",
   "Zapier is a platform that allows Outline to easily integrate with thousands of other business tools. Head over to Zapier to setup a \"Zap\" and start programmatically interacting with Outline.'": "Zapier is a platform that allows Outline to easily integrate with thousands of other business tools. Head over to Zapier to setup a \"Zap\" and start programmatically interacting with Outline.'",
